compiler/testData/cli/jvm/compatqualDefault.out
compiler/testData/cli/jvm/compatqualUsage.kt:2:11: error: null can not be a value of a non-null type String
    b.foo(null)
          ^
COMPILATION_ERROR
